Update ! can't remember

--- a/src/main/resources/assets/teleportation_mod/lang/en_us.json
+++ b/src/main/resources/assets/teleportation_mod/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "item.teleportation_mod.teleportation_item": "Caca",
-  "block.teleportation_mod.teleportation_block": "Teleporter"
+  "item.teleportation_mod.teleportation_item": "Catalyst",
+  "block.teleportation_mod.teleportation_block": "Teleportation Altar"
 }
